--- a/Automation/report.html
+++ b/Automation/report.html
@@ -1897,22 +1897,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,10025],[],[[4,0,0,[],[1,317,9706],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,19403],[[4,5,4,0,[],[1,36,19353],[[6,7,8,0,[],[1,38,19328],[],[[9,0,0,[],[1,618,18744],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*TestCase1","*G:\\AkshayBabuWorkSpace\\Python-Robot_FrameWork\\Automation\\TestCases\\TestCase1.robot","*TestCases/TestCase1.robot","*LoginTest"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Automation","*G:\\AkshayBabuWorkSpace\\Python-Robot_FrameWork\\Automation","*.","*TestCases","*G:\\AkshayBabuWorkSpace\\Python-Robot_FrameWork\\Automation\\TestCases","*multibrowser TestCase9","*G:\\AkshayBabuWorkSpace\\Python-Robot_FrameWork\\Automation\\TestCases\\multibrowser_TestCase9.robot","*TestCases/multibrowser_TestCase9.robot","*Tabded windows"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:10","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:10","fail":0,"id":"s1","label":"TestCase1","name":"TestCase1","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:19","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:19","fail":0,"id":"s1","label":"Automation","name":"Automation","pass":1,"skip":0},{"elapsed":"00:00:19","fail":0,"id":"s1-s1","label":"Automation.TestCases","name":"TestCases","pass":1,"skip":0},{"elapsed":"00:00:19","fail":0,"id":"s1-s1-s1","label":"Automation.TestCases.multibrowser TestCase9","name":"multibrowser TestCase9","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1723917229319;
+window.output["baseMillis"] = 1724609366603;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 10045;
+window.output["generated"] = 19448;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
