--- a/Automation/log.html
+++ b/Automation/log.html
@@ -2081,25 +2081,25 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,10025],[],[[4,0,0,[],[1,317,9706],[[0,5,6,0,7,8,0,0,[1,318,3483],[[318,2,9]]],[0,10,6,0,11,12,0,0,[1,3818,555],[[3819,2,13]]],[0,10,6,0,11,14,0,0,[1,4374,352],[[4375,2,15]]],[0,16,6,0,17,18,0,0,[1,4727,916],[[4728,2,19]]],[0,20,6,0,21,0,0,0,[1,5644,4378],[]]]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,19403],[[4,5,4,0,[],[1,36,19353],[[6,7,8,0,[],[1,38,19328],[],[[9,0,0,[],[1,618,18744],[[0,10,11,0,12,13,0,0,[1,619,4786],[[620,2,14]]],[0,15,11,0,16,0,0,0,[1,5406,117],[]],[0,17,18,0,19,20,0,0,[1,5524,5001],[[10525,2,21]]],[0,10,11,0,12,22,0,0,[1,10528,2516],[[10529,2,23]]],[0,15,11,0,16,0,0,0,[1,13044,1244],[]],[0,17,18,0,19,20,0,0,[1,14288,5001],[[19288,2,21]]],[0,24,11,0,25,26,0,0,[1,19290,1],[]],[0,27,11,0,28,0,29,0,[1,19292,40],[[19332,2,30]]],[0,31,18,0,32,29,0,0,[1,19333,1],[]],[0,24,11,0,25,33,0,0,[1,19337,1],[]],[0,27,11,0,28,0,34,0,[1,19340,18],[[19358,2,35]]],[0,31,18,0,32,34,0,0,[1,19359,2],[]]]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*TestCase1","*G:\\AkshayBabuWorkSpace\\Python-Robot_FrameWork\\Automation\\TestCases\\TestCase1.robot","*TestCases/TestCase1.robot","*LoginTest","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*<a href=\"https://www.saucedemo.com/v1/\">https://www.saucedemo.com/v1/\x3c/a>    chrome","*Opening browser 'chrome' to base url '<a href=\"https://www.saucedemo.com/v1/\">https://www.saucedemo.com/v1/\x3c/a>'.","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*name:user-name    standard_user","*Typing text 'standard_user' into text field 'name:user-name'.","*name:password    secret_sauce","*Typing text 'secret_sauce' into text field 'name:password'.","*Click Element","*<p>Click the element identified by <code>locator\x3c/code>.\x3c/p>","*id:login-button","*Clicking element 'id:login-button'.","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Automation","*G:\\AkshayBabuWorkSpace\\Python-Robot_FrameWork\\Automation","*.","*TestCases","*G:\\AkshayBabuWorkSpace\\Python-Robot_FrameWork\\Automation\\TestCases","*multibrowser TestCase9","*G:\\AkshayBabuWorkSpace\\Python-Robot_FrameWork\\Automation\\TestCases\\multibrowser_TestCase9.robot","*TestCases/multibrowser_TestCase9.robot","*Tabded windows","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*<a href=\"https://demo.automationtesting.in/Windows.html\">https://demo.automationtesting.in/Windows.html\x3c/a>    chrome","*Opening browser 'chrome' to base url '<a href=\"https://demo.automationtesting.in/Windows.html\">https://demo.automationtesting.in/Windows.html\x3c/a>'.","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*5","*Slept 5 seconds.","*<a href=\"https://www.google.com\">https://www.google.com\x3c/a>    chrome","*Opening browser 'chrome' to base url '<a href=\"https://www.google.com\">https://www.google.com\x3c/a>'.","*Switch Browser","*<p>Switches between active browsers using <code>index_or_alias\x3c/code>.\x3c/p>","*1","*Get Title","*<p>Returns the title of the current page.\x3c/p>","*${title}","*${title} = Frames &amp; windows","*Log To Console","*<p>Logs the given message to the console.\x3c/p>","*2","*${title2}","*${title2} = Google"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:10","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:10","fail":0,"id":"s1","label":"TestCase1","name":"TestCase1","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:19","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:19","fail":0,"id":"s1","label":"Automation","name":"Automation","pass":1,"skip":0},{"elapsed":"00:00:19","fail":0,"id":"s1-s1","label":"Automation.TestCases","name":"TestCases","pass":1,"skip":0},{"elapsed":"00:00:19","fail":0,"id":"s1-s1-s1","label":"Automation.TestCases.multibrowser TestCase9","name":"multibrowser TestCase9","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1723917229319;
+window.output["baseMillis"] = 1724609366603;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 10045;
+window.output["generated"] = 19448;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
