Updated Mouse Screenshot TestCases
Updated Mouse Screenshot TestCases

--- a/Automation/report.html
+++ b/Automation/report.html
@@ -1897,22 +1897,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,19403],[[4,5,4,0,[],[1,36,19353],[[6,7,8,0,[],[1,38,19328],[],[[9,0,0,[],[1,618,18744],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,28416],[[4,5,4,0,[],[1,109,28303],[[6,7,8,0,[],[1,125,28282],[],[[9,0,0,[],[1,851,27553],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Automation","*G:\\AkshayBabuWorkSpace\\Python-Robot_FrameWork\\Automation","*.","*TestCases","*G:\\AkshayBabuWorkSpace\\Python-Robot_FrameWork\\Automation\\TestCases","*multibrowser TestCase9","*G:\\AkshayBabuWorkSpace\\Python-Robot_FrameWork\\Automation\\TestCases\\multibrowser_TestCase9.robot","*TestCases/multibrowser_TestCase9.robot","*Tabded windows"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Automation","*G:\\AkshayBabuWorkSpace\\Python-Robot_FrameWork\\Automation","*.","*TestCases","*G:\\AkshayBabuWorkSpace\\Python-Robot_FrameWork\\Automation\\TestCases","*MouseAction TestCase","*G:\\AkshayBabuWorkSpace\\Python-Robot_FrameWork\\Automation\\TestCases\\MouseAction_TestCase.robot","*TestCases/MouseAction_TestCase.robot","*Mouse Action TestCase"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:19","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:19","fail":0,"id":"s1","label":"Automation","name":"Automation","pass":1,"skip":0},{"elapsed":"00:00:19","fail":0,"id":"s1-s1","label":"Automation.TestCases","name":"TestCases","pass":1,"skip":0},{"elapsed":"00:00:19","fail":0,"id":"s1-s1-s1","label":"Automation.TestCases.multibrowser TestCase9","name":"multibrowser TestCase9","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:28","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:28","fail":0,"id":"s1","label":"Automation","name":"Automation","pass":1,"skip":0},{"elapsed":"00:00:28","fail":0,"id":"s1-s1","label":"Automation.TestCases","name":"TestCases","pass":1,"skip":0},{"elapsed":"00:00:28","fail":0,"id":"s1-s1-s1","label":"Automation.TestCases.MouseAction TestCase","name":"MouseAction TestCase","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1724609366603;
+window.output["baseMillis"] = 1724780475475;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 19448;
+window.output["generated"] = 28460;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
